--- a/src/main/resources/com/mmn/circuitscourts/fxml/Entreprise/Map.fxml
+++ b/src/main/resources/com/mmn/circuitscourts/fxml/Entreprise/Map.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -11,7 +14,30 @@
                 <fx:include source="Sidebar.fxml" />
             </left>
             <center>
-                <VBox fx:id="vbox" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+            <VBox style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+               <children>
+                  <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="70.0" styleClass="back-button" text="Retour" onMouseClicked="#onBackButton">
+                     <VBox.margin>
+                        <Insets left="10.0" top="20.0" />
+                     </VBox.margin>
+                     <graphic>
+                        <Region prefHeight="200.0" prefWidth="200.0" styleClass="back-button-img" />
+                     </graphic>
+                  </Button>
+                  <VBox alignment="CENTER">
+                     <children>
+                            <VBox fx:id="vbox" alignment="CENTER" maxWidth="800.0" prefHeight="700.0" prefWidth="100.0" styleClass="profil-container">
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
+                        </VBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="15.0" />
+                     </VBox.margin>
+                  </VBox>
+               </children>
+            </VBox>
             </center>
         </BorderPane>
     </children>
